# cider-rust

./: .gitignore  Cargo.toml  cider.yaml  docker-compose.yml  provider_config.toml
src/: cli.yml  main.rs  provider.rs
src/model/: project.rs
src/provider/: configuration.rs  gitlab.rs  teamcity.rs
teamcity_apis/: Cargo.toml  README.md
teamcity_apis/.openapi-generator/: FILES
teamcity_apis/docs/: Agent.md  AgentApi.md  AgentLocator.md  AgentPool.md  AgentPoolApi.md  AgentPoolLocator.md  AgentPools.md  AgentRequirement.md  AgentRequirements.md  Agents.md  ArtifactDependencies.md  ArtifactDependency.md  AuditAction.md  AuditApi.md  AuditEvent.md  AuditEvents.md  AuditLocator.md  AuthorizedInfo.md  Branch.md  BranchLocator.md  BranchVersion.md  Branches.md  Build.md  BuildApi.md  BuildCancelRequest.md  BuildChange.md  BuildChanges.md  BuildLocator.md  BuildQueueApi.md  BuildQueueLocator.md  BuildTriggeringOptions.md  BuildType.md  BuildTypeApi.md  BuildTypeLocator.md  BuildTypes.md  Builds.md  Change.md  ChangeApi.md  ChangeLocator.md  Changes.md  (+134 more)
teamcity_apis/src/apis/: agent_api.rs  agent_pool_api.rs  audit_api.rs  build_api.rs  build_queue_api.rs  build_type_api.rs  change_api.rs  cloud_instance_api.rs  configuration.rs  group_api.rs  investigation_api.rs  mod.rs  mute_api.rs  problem_api.rs  problem_occurrence_api.rs  project_api.rs  root_api.rs  server_api.rs  test_api.rs  test_occurrence_api.rs  user_api.rs  vcs_root_api.rs  vcs_root_instance_api.rs
teamcity_apis/src/models/: agent.rs  agent_locator.rs  agent_pool.rs  agent_pool_locator.rs  agent_pools.rs  (+156 more)
